[gd_scene load_steps=5 format=3 uid="uid://dsxao4bgni7oy"]

[ext_resource type="Script" uid="uid://dw3we2r0hfian" path="res://scripts/units/unit.gd" id="1_6e3tn"]
[ext_resource type="Texture2D" uid="uid://vqs64pvpyxgk" path="res://assets/units/avatars/m_21.png" id="2_6e3tn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6e3tn"]
radius = 15.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cx6aj"]
size = Vector2(10, 10)

[node name="Unit" type="CharacterBody2D"]
script = ExtResource("1_6e3tn")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
scale = Vector2(10, 10)
shape = SubResource("CircleShape2D_6e3tn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(10, 10)
shape = SubResource("RectangleShape2D_cx6aj")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -10)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_6e3tn")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="area_entered" from="AttackArea" to="." method="_on_attack_area_entered"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_area_2d_body_exited"]
